src/test/ui/borrowck/borrowck-while.stderr
error[E0381]: used binding `x` isn't initialized in all conditions
  --> $DIR/borrowck-while.rs:4:12
   |
LL |     let mut x: isize;
   |         ----- binding declared here but left uninitialized
LL |     while 1 == 1 { x = 10; }
   |           ------ `x` is uninitialized if this condition isn't met and the `while` loop runs 0 times
LL |     return x;
   |            ^ `x` used here but it isn't initialized in all conditions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
